# ppois

./: .gitignore  pyproject.toml
lab1/task1/: main.py  script.py  turing_machine.py
lab1/task1/tests/: fixtures.py  state_transition_table_test.py  tape_head_test.py  turing_machine_test.py
lab1/task1/turing_machine/: direction.py  state_transition_table.py  tape_head.py  transition.py  turing_machine.py  turing_machine_cli.py
lab1/task2/: main.py  markov_algorithm.py  script.py
lab1/task2/markov_algorithms/: formula.py  markov_algorithm.py  markov_algoritm_cli.py  scheme.py  tape.py
lab1/task2/tests/: fixtures.py  formula_test.py  markov_algorithm_test.py  scheme_test.py  tape_test.py
lab2/: Implement_classes.md
lab2/core/: exceptions.py
lab2/core/enums/: Country.py  Currency.py  Material.py  Permission.py  Product.py  Status.py  VehicleType.py  advertisement.py  country.py  currency.py  material.py  product.py  status.py  vehicle_type.py
lab2/core/utils/: id_generator.py
lab2/tests/core_tests/: id_generator_test.py
lab3/: Implement_classes.md
lab3/application/factories/: AccountFactory.py
lab3/application/interfaces/: BaseFactory.py  IRepository.py
lab3/core/enums/: AccountType.py  CardStatus.py  CardType.py  CreditType.py  Currency.py  Denomination.py  TicketStatus.py  TransactionType.py
lab3/exceptions/: application_errors.py  domain_errors.py  infrastructure_errors.py  utils_errors.py
lab4/task1/: Comparable.py  bubble_sort.py  comparable.py  patience_sort.py
lab4/task2/: ConstContainer.py  Graph.py  IBidirectionalIterator.py
(+233 files in other folders)
